--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </marquee> 
   <h2>ABOUT GITHUB</h2> GitHub, Inc. is an American multinational corporation that provides hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git, plus its own features. 
   <p></p> 
-  <hr>
+  <hr size="5">
   <p></p> 
   <h2>IMPORTANCE OF GITHUB</h2> 
   <p></p> 
